syntax = "proto3";

import "common.proto";

option csharp_namespace = "GrpcServices.HallManager";

message CreateCinemaRequest {
  string name = 1;
  string location = 2;
}

// The response message containing the greetings.
message CreateCinemaReply {
  common.ResultStatus result = 1;
  int32 cinema_id = 2;
}
